--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 /*====================*/
 
 .home {
-    background-image: url(/starter-code/assets/home/background-home-desktop.jpg);
+    background-image: url("/starter-code/assets/home/background-home-desktop.jpg");
     height: 100vh;
     background-size: cover;
 }
